# Polygone

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DECISIONS.md  Dockerfile  Dockerfile.server  FICHE_TECHNIQUE.md  FORUM_PROMO_KIT.md  GATEWAY.md  GUIDE_UTILISATEUR.md  HISTOIRE.md  INSTALL.md  MESSAGING.md  MSH_SPEC.md  POLYGONE_MANIFESTO.md  PROMPT_TRANSFERT_QWEN.md  README.md  REDDIT_POST.md  RELEASE.md  SCALING_GUIDE.md  SECURITY.md  SPEC.md  demo.html  docker-compose.yml  entrypoint.sh  fly.toml  index.html  indows: '# Windows: use WSL or build from source'|g  install-polygone.bat  install-polygone.sh  install.ps1  install.sh  install_simple.sh  keepalive.sh  kem.rs  node.rs  polygone.sh  pulse.py  railway.json  (+5 more)
.github/workflows/: ci.yml  deploy.yml  release.yml
DEPLOYMENT/: docker-compose.enterprise.yml  polydoc-gen  verify-config
DEPLOYMENT/ansible/: playbook.enterprise.yml
DEPLOYMENT/k8s/: enterprise-deployment.yaml
DEPLOYMENT/terraform/: enterprise.tf
MAX/: installer.html  mobile.css  mobile.html  simple-config.json
MAX/backend/: main.py
benches/: crypto_bench.rs
core/: Cargo.toml
core/src/crypto/: kem.rs
crates/app/: Cargo.toml
crates/app/src/: cli.rs  http_api.rs  main.rs  runtime.rs
crates/common/: Cargo.toml
crates/common/src/: error.rs  lib.rs  node.rs  packet.rs  session.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: hash.rs  kem.rs  lib.rs  shamir.rs  symmetric.rs
crates/crypto/tests/: integration.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: main.rs
crates/msh/: Cargo.toml
crates/msh/src/: lib.rs
crates/msh/tests/: transfer.rs
crates/network/: Cargo.toml
crates/network/src/: behaviour.rs  lib.rs  node.rs
demos/: 2-node-demo.sh  README.md  protocol-walkthrough.sh
docs/: ARCHITECTURE.md  PROTOCOL.md  SECURITY.md
installer/: install.sh
polygone-tui/: README.md  install_polygone.sh  setup.py  simple_test.py  test_features.py
polygone-tui/polygone_tui/: app.py  cli.py
polygone-tui/polygone_tui.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: demo.sh  install.sh
server/: Cargo.toml
src/: error.rs  keys.rs  lib.rs  main.rs  mod.rs  packet.rs  security.rs  sign.rs
src.legacy/: boost.rs  lib.rs  main.rs  node.rs  session.rs  topology.rs
src.legacy/crypto/: mod.rs
src.legacy/tui/: views_services.rs
src/compute/: idle.rs
src/crypto/: karma.rs  kem.rs  mod.rs  secure_types.rs  shamir.rs  sign.rs
src/drive/: erasure.rs  index.rs  mod.rs  storage.rs
src/network/: discovery.rs  mod.rs  node.rs  p2p.rs  topology.rs
src/protocol/: mod.rs  session.rs
src/server/: container.rs  mod.rs  ratelimit.rs  registry.rs  resource.rs
src/tui/: app.rs  favorites.rs  mod.rs  views.rs  views_params.rs  widgets.rs
tests/: crypto_integration.rs  integration_test.rs
