[package]
name = "polygone"
version = "2.0.0"
edition = "2021"
authors = ["Lévy <lvs0@proton.me>", "Hope Collective"]
description = "Post-quantum private messaging for everyone — Secure, ephemeral, invisible"
license = "MIT"
repository = "https://github.com/lvs0/Polygone"
keywords = ["post-quantum", "privacy", "messaging", "cryptography", "secure"]
categories = ["cryptography", "network-programming", "command-line-utilities"]
rust-version = "1.75"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1

[lib]
name = "polygone"
path = "src/lib.rs"

[[bin]]
name = "polygone"
path = "src/main.rs"

[[bin]]
name = "polygone-gui"
path = "src/bin/polygone-gui.rs"
required-features = ["gui"]

[features]
default = ["cli"]
cli = []
gui = ["dep:iced", "dep:qrcode"]
full = ["cli", "gui"]

[dependencies]
# ── Post-Quantum KEM ─────────────────────────────────────────────────────────
pqcrypto-mlkem    = "0.1"
pqcrypto-mldsa    = "0.1"
pqcrypto-traits   = "0.3"

# ── Symmetric + Hash ─────────────────────────────────────────────────────────
aes-gcm         = { version = "0.10", features = ["aes"] }
blake3          = "1"
zeroize         = { version = "1", features = ["derive"] }
subtle          = "2"

# ── Signatures (Ed25519 — ML-DSA swap-ready via trait) ───────────────────────
ed25519-dalek   = { version = "2", features = ["rand_core"] }

# ── Secret Sharing ───────────────────────────────────────────────────────────
sharks          = { version = "0.5", default-features = false }
rand            = "0.8"
getrandom       = "0.2"

# ── Async Runtime ────────────────────────────────────────────────────────────
tokio           = { version = "1", features = ["full"] }

# ── Serialization ────────────────────────────────────────────────────────────
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
bincode         = "1"
hex             = "0.4"

# ── Error Handling ───────────────────────────────────────────────────────────
thiserror       = "1"
anyhow          = "1"

# ── CLI & Logging ────────────────────────────────────────────────────────────
clap            = { version = "4", features = ["derive"] }
tracing          = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ── System ───────────────────────────────────────────────────────────────────
dirs            = "5"

# ── GUI (optional) ───────────────────────────────────────────────────────────
iced            = { version = "0.13", features = ["tokio"], optional = true }
qrcode          = { version = "0.14", optional = true }

# ── Networking (v2.0) ────────────────────────────────────────────────────────
libp2p          = { version = "0.54", features = ["tcp", "noise", "yamux", "kad", "dns", "quic"], optional = true }

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[[bench]]
name = "crypto_bench"
harness = false