[package]
name = "polygone"
version = "1.0.0"
edition = "2021"
authors = ["Lévy <polygone@proton.me>"]
description = "Post-quantum ephemeral privacy network — ML-KEM-1024 · Shamir 4-of-7 · AES-256-GCM"
license = "MIT"
repository = "https://github.com/lvs0/Polygone"
rust-version = "1.75"
readme = "README.md"
keywords = ["post-quantum", "privacy", "network", "ml-kem", "shamir"]
categories = ["cryptography", "network", "security"]

[lib]
name = "polygone"
path = "src/lib.rs"

[[bin]]
name = "polygone"
path = "src/main.rs"

[[bin]]
name = "polygone-server"
path = "src/bin/polygone-server.rs"
required-features = ["server"]

[features]
default = []
server = ["dep:libp2p", "dep:reqwest"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
pqcrypto-mlkem    = "0.1"
pqcrypto-mldsa    = "0.1"
pqcrypto-traits   = "0.3"
aes-gcm           = { version = "0.10", features = ["aes"] }
blake3            = "1"
zeroize           = { version = "1", features = ["derive"] }
subtle            = "2"
ed25519-dalek     = { version = "2", features = ["rand_core"] }
sharks            = { version = "0.5", default-features = false }
rand              = "0.8"
getrandom         = "0.2"
tokio             = { version = "1", features = ["full"] }
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
bincode           = "1"
hex               = "0.4"
thiserror         = "1"
anyhow            = "1"
clap              = { version = "4", features = ["derive"] }
futures           = "0.3"
tracing           = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs              = "5"
ratatui           = "0.30"
crossterm         = "0.27"

# ── libp2p (server feature) ─────────────────────────────────────────
libp2p = { version = "0.56", features = [
  "tokio",
  "tcp",
  "dns",
  "noise",
  "yamux",
  "identify",
  "kad",
], optional = true }

# ── reqwest (server feature) ─────────────────────────────────────────
reqwest = { version = "0.12", features = ["json"], optional = true }

[dev-dependencies]
criterion = "0.5"
