[package]
name    = "polygone-core"
version = "0.1.0"
edition = "2021"
authors = ["Lévy <contact@soe-ai.dev>"]
description = "Post-quantum ephemeral network — core protocol library"
license = "MIT"
repository = "https://github.com/lvs0/Polygone"
keywords   = ["post-quantum", "p2p", "privacy", "cryptography", "ephemeral"]
categories = ["cryptography", "network-programming"]

# Harden the binary - Profile is now handled at workspace root

[profile.dev]
opt-level = 1

[lib]
name = "polygone"
path = "src/lib.rs"

[[bin]]
name = "polygone"
path = "src/main.rs"

[dependencies]
# ── Post-Quantum Cryptography ──────────────────────────────
pqcrypto-mlkem    = "0.1"          # ML-KEM-1024 (FIPS 203)
pqcrypto-mldsa    = "0.1"          # ML-DSA-87   (FIPS 204)
pqcrypto-traits   = "0.3"

# ── Symmetric / Hash ──────────────────────────────────────
aes-gcm           = { version = "0.10", features = ["aes"] }
blake3            = "1"
hex            = "0.4"
zeroize           = { version = "1", features = ["derive"] }
subtle            = "2"           # Constant-time comparisons

# ── Secret Sharing ────────────────────────────────────────
sharks           = { version = "0.5", default-features = false }

# ── Async Runtime + Networking ────────────────────────────
tokio            = { version = "1", features = ["full"] }
libp2p           = { version = "0.53", features = [
                     "tokio", "tcp", "noise", "yamux", "macros",
                     "kad", "identify", "ping", "gossipsub", "request-response", "cbor"] }

# ── Randomness ────────────────────────────────────────────
rand             = "0.8"
rand_core        = "0.6"
getrandom        = { version = "0.2", features = ["js"] }

# ── Serialization ─────────────────────────────────────────
serde            = { version = "1", features = ["derive"] }
bincode          = "1"
base64           = "0.22"

# ── Error Handling ────────────────────────────────────────
thiserror        = "1"
anyhow           = "1"

# ── CLI ───────────────────────────────────────────────────
clap             = { version = "4", features = ["derive"] }

# ── Logging ───────────────────────────────────────────────
tracing          = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ── Time ──────────────────────────────────────────────────
tokio-util       = { version = "0.7", features = ["time"] }

[dev-dependencies]
tokio-test       = "0.4"
proptest         = "1"
criterion        = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "crypto_bench"
harness = false


